# head-in-the-cloud

./: .gitignore  .gpuignore  README.md  pyproject.toml
headinthecloud/: __init__.py  cli.py  collector.py  config.py  kaggle_client.py  notifier.py  packer.py
tests/: test_cli.py  test_collector.py  test_config_cli.py  test_kaggle_client.py  test_notifier.py  test_packer.py
