[project]
name = "head-in-the-cloud"
version = "0.1.0"
description = "Run GPU workloads on Kaggle from your local machine"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.6",
    "click>=8.0",
    "tqdm>=4.0",
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
hitc = "headinthecloud.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
